--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/style.scss" />
+    <link rel="stylesheet" href="#" />
     <title>Document</title>
   </head>
   <body>
-    hgcjcjfcjf
+    <img src="./styles/inhaqq.jpg.jpg" alt="meme" />
     <script src="./index.js"></script>
   </body>
 </html>
