:lipstick: added style

--- a/index.html
+++ b/index.html
@@ -3,11 +3,105 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="#" />
+    <link rel="stylesheet" href="./styles/style.scss" />
     <title>Manoilo-JS-homework</title>
   </head>
   <body>
-    <img src="./styles/inhaqq.jpg.jpg" alt="meme" />
+    <div class="block1">
+      <h1 class="block1__title">Основы JavaScript</h1>
+      <ul class="block1__list">
+        <li class="block1__item-task">
+          <button id="task1">
+            Запросите у пользователя его имя и выведите в ответ: «Привет, его
+            имя!
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task2">
+            Запросите у пользователя год его рождения, посчитайте, сколько ему
+            лет и выведите результат. Текущий год укажите в коде как константу.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task3">
+            Запросите у пользователя длину стороны квадрата и выведите периметр
+            такого квадрата.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task4">
+            Запросите у пользователя радиус окружности и выведите площадь такой
+            окружности.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task5">
+            Запросите у пользователя расстояние в км между двумя городами и за
+            сколько часов он хочет добраться. Посчитайте скорость, с которой
+            необходимо двигаться, чтобы успеть вовремя.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task6">
+            Реализуйте конвертор валют. Пользователь вводит доллары, программа
+            переводит в евро. Курс валюты храните в константе.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task7">
+            Пользователь указывает объем флешки в Гб. Программа должна
+            посчитать, сколько файлов размером в 820 Мб помещается на флешку.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task8">
+            Пользователь вводит сумму денег в кошельке и цену одной шоколадки.
+            Программа выводит, сколько шоколадок может купить пользователь, и
+            сколько сдачи у него останется.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task9">
+            Запросите у пользователя трехзначное число и выведите его задом
+            наперед. Для решения задачи вам понадобится оператор % (остаток от
+            деления).
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task10">
+            Пользователь вводит сумму вклада в банк на 2 месяца, с процентной
+            ставкой депозита 5% годовых. Вывести сумму начисленных процентов.
+          </button>
+        </li>
+      </ul>
+    </div>
+    <div class="block1">
+      <h1 class="block1__title">LESSON JS-2: Типи даних та оператори</h1>
+      <ul class="block1__list">
+        <li class="block1__item-task">
+          <button id="task11">
+            Запросить у пользователя его возраст и определить, кем он является:
+            ребенком (0–2), подростком (12–18), взрослым (18_60) или пенсионером
+            (60– ...).
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task12">
+            Запросить у пользователя число от 0 до 9 и вывести ему спецсимвол,
+            который расположен на этой клавише (1–!, 2–@, 3–# и т. д).
+          </button>
+        </li>
+        <li class="block1__item-task"><button id="task13">Try it</button></li>
+        <li class="block1__item-task"><button id="task14">Try it</button></li>
+        <li class="block1__item-task"><button id="task15">Try it</button></li>
+        <li class="block1__item-task"><button id="task16">Try it</button></li>
+        <li class="block1__item-task"><button id="task17">Try it</button></li>
+        <li class="block1__item-task"><button id="task18">Try it</button></li>
+        <li class="block1__item-task"><button id="task19">Try it</button></li>
+        <li class="block1__item-task"><button id="task20">Try it</button></li>
+      </ul>
+    </div>
+
     <script src="./index.js"></script>
   </body>
 </html>
