--- a/index.html
+++ b/index.html
@@ -7,93 +7,121 @@
     <title>Manoilo-JS-homework</title>
   </head>
   <body>
-    <div class="block1">
-      <h1 class="block1__title">Основы JavaScript</h1>
+    <header class="header">
+      <div class="header__logo-wrapper">
+        <a href="#" class="header__logo">Manoilo homework</a>
+      </div>
+      <div class="header__nav-panel">
+        <a href="#block1" class="header__nav-link">Основы JavaScript</a
+        ><a href="#block2" class="header__nav-link">Типи даних та оператори</a>
+      </div>
+    </header>
+    <div class="block1" id="block1">
+      <h1 class="block1__title">Lesson JS-1. Основы JavaScript</h1>
       <ul class="block1__list">
         <li class="block1__item-task">
           <button id="task1">
-            Запросите у пользователя его имя и выведите в ответ: «Привет, его
+            1. Запросите у пользователя его имя и выведите в ответ: «Привет, его
             имя!
           </button>
         </li>
         <li class="block1__item-task">
           <button id="task2">
-            Запросите у пользователя год его рождения, посчитайте, сколько ему
-            лет и выведите результат. Текущий год укажите в коде как константу.
+            2. Запросите у пользователя год его рождения, посчитайте, сколько
+            ему лет и выведите результат. Текущий год укажите в коде как
+            константу.
           </button>
         </li>
         <li class="block1__item-task">
           <button id="task3">
-            Запросите у пользователя длину стороны квадрата и выведите периметр
-            такого квадрата.
+            3. Запросите у пользователя длину стороны квадрата и выведите
+            периметр такого квадрата.
           </button>
         </li>
         <li class="block1__item-task">
           <button id="task4">
-            Запросите у пользователя радиус окружности и выведите площадь такой
-            окружности.
+            4. Запросите у пользователя радиус окружности и выведите площадь
+            такой окружности.
           </button>
         </li>
         <li class="block1__item-task">
           <button id="task5">
-            Запросите у пользователя расстояние в км между двумя городами и за
-            сколько часов он хочет добраться. Посчитайте скорость, с которой
+            5. Запросите у пользователя расстояние в км между двумя городами и
+            за сколько часов он хочет добраться. Посчитайте скорость, с которой
             необходимо двигаться, чтобы успеть вовремя.
           </button>
         </li>
         <li class="block1__item-task">
           <button id="task6">
-            Реализуйте конвертор валют. Пользователь вводит доллары, программа
-            переводит в евро. Курс валюты храните в константе.
+            6. Реализуйте конвертор валют. Пользователь вводит доллары,
+            программа переводит в евро. Курс валюты храните в константе.
           </button>
         </li>
         <li class="block1__item-task">
           <button id="task7">
-            Пользователь указывает объем флешки в Гб. Программа должна
+            7. Пользователь указывает объем флешки в Гб. Программа должна
             посчитать, сколько файлов размером в 820 Мб помещается на флешку.
           </button>
         </li>
         <li class="block1__item-task">
           <button id="task8">
-            Пользователь вводит сумму денег в кошельке и цену одной шоколадки.
-            Программа выводит, сколько шоколадок может купить пользователь, и
-            сколько сдачи у него останется.
+            8. Пользователь вводит сумму денег в кошельке и цену одной
+            шоколадки. Программа выводит, сколько шоколадок может купить
+            пользователь, и сколько сдачи у него останется.
           </button>
         </li>
         <li class="block1__item-task">
           <button id="task9">
-            Запросите у пользователя трехзначное число и выведите его задом
+            9. Запросите у пользователя трехзначное число и выведите его задом
             наперед. Для решения задачи вам понадобится оператор % (остаток от
             деления).
           </button>
         </li>
         <li class="block1__item-task">
           <button id="task10">
-            Пользователь вводит сумму вклада в банк на 2 месяца, с процентной
-            ставкой депозита 5% годовых. Вывести сумму начисленных процентов.
+            10. Пользователь вводит сумму вклада в банк на 2 месяца, с
+            процентной ставкой депозита 5% годовых. Вывести сумму начисленных
+            процентов.
           </button>
         </li>
       </ul>
     </div>
-    <div class="block1">
-      <h1 class="block1__title">LESSON JS-2: Типи даних та оператори</h1>
+    <div class="block1" id="block2">
+      <h1 class="block1__title">Lesson JS-2. Типи даних та оператори</h1>
       <ul class="block1__list">
         <li class="block1__item-task">
           <button id="task11">
-            Запросить у пользователя его возраст и определить, кем он является:
-            ребенком (0–2), подростком (12–18), взрослым (18_60) или пенсионером
-            (60– ...).
+            1. Запросить у пользователя его возраст и определить, кем он
+            является: ребенком (0–2), подростком (12–18), взрослым (18_60) или
+            пенсионером (60– ...).
           </button>
         </li>
         <li class="block1__item-task">
           <button id="task12">
-            Запросить у пользователя число от 0 до 9 и вывести ему спецсимвол,
-            который расположен на этой клавише (1–!, 2–@, 3–# и т. д).
+            2. Запросить у пользователя число от 0 до 9 и вывести ему
+            спецсимвол, который расположен на этой клавише (1–!, 2–@, 3–# и т.
+            д).
           </button>
         </li>
-        <li class="block1__item-task"><button id="task13">Try it</button></li>
-        <li class="block1__item-task"><button id="task14">Try it</button></li>
-        <li class="block1__item-task"><button id="task15">Try it</button></li>
+        <li class="block1__item-task">
+          <button id="task13">
+            3. Запросить у пользователя трехзначное число и проверить, есть ли в
+            нем одинаковые цифры.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task14">
+            Запросить у пользователя год и проверить, високосный он или нет.
+            Високосный год либо кратен 400, либо кратен 4 и при этом не кратен
+            100.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task15">
+            Запросить у пользователя пятиразрядное число и определить, является
+            ли оно палиндромом.
+          </button>
+        </li>
         <li class="block1__item-task"><button id="task16">Try it</button></li>
         <li class="block1__item-task"><button id="task17">Try it</button></li>
         <li class="block1__item-task"><button id="task18">Try it</button></li>
