--- a/index.html
+++ b/index.html
@@ -111,22 +111,52 @@
         </li>
         <li class="block1__item-task">
           <button id="task14">
-            Запросить у пользователя год и проверить, високосный он или нет.
+            4. Запросить у пользователя год и проверить, високосный он или нет.
             Високосный год либо кратен 400, либо кратен 4 и при этом не кратен
             100.
           </button>
         </li>
         <li class="block1__item-task">
           <button id="task15">
-            Запросить у пользователя пятиразрядное число и определить, является
-            ли оно палиндромом.
+            5. Запросить у пользователя пятиразрядное число и определить,
+            является ли оно палиндромом.
           </button>
         </li>
-        <li class="block1__item-task"><button id="task16">Try it</button></li>
-        <li class="block1__item-task"><button id="task17">Try it</button></li>
-        <li class="block1__item-task"><button id="task18">Try it</button></li>
-        <li class="block1__item-task"><button id="task19">Try it</button></li>
-        <li class="block1__item-task"><button id="task20">Try it</button></li>
+        <li class="block1__item-task">
+          <button id="task16">
+            6. Написать конвертор валют. Пользователь вводит количество USD,
+            выбирает, в какую валюту хочет перевести EUR, UAN или AZN, и
+            получает в ответ соответствующую сумму.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task17">
+            7. Запросить у пользователя сумму покупки и вывести сумму к оплате
+            со скидкой: от 200 до 300 – скидка будет 3%, от 300 до 500 – 5%, от
+            500 и выше – 7%.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task18">
+            8. Запросить у пользователя длину окружности и периметр квадрата.
+            Определить, может ли такая окружность поместиться в указанный
+            квадрат.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task19">
+            9. Задать пользователю 3 вопроса, в каждом вопросе по 3 варианта
+            ответа. За каждый правильный ответ начисляется 2 балла. После
+            вопросов выведите пользователю количество набранных баллов.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task20">
+            10. Запросить дату (день, месяц, год) и вывести следующую за ней
+            дату. Учтите возможность перехода на следующий месяц, год, а также
+            високосный год.
+          </button>
+        </li>
       </ul>
     </div>
 
