:tada: new homework started

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="header__nav-panel">
         <a href="#block1" class="header__nav-link">Основы JavaScript</a
         ><a href="#block2" class="header__nav-link">Типи даних та оператори</a>
+        <a href="#block3" class="header__nav-link">Цикли</a>
       </div>
     </header>
     <div class="block1" id="block1">
@@ -159,7 +160,43 @@
         </li>
       </ul>
     </div>
-
+    <div class="block1" id="block3">
+      <h1 class="block1__title">Lesson JS-3. Цикли</h1>
+      <ul class="block1__list">
+        <li class="block1__item-task">
+          <button id="task21">
+            1. Подсчитать сумму всех чисел в заданном пользователем диапазоне.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id=""></button>
+        </li>
+        <li class="block1__item-task">
+          <button id=""></button>
+        </li>
+        <li class="block1__item-task">
+          <button id=""></button>
+        </li>
+        <li class="block1__item-task">
+          <button id=""></button>
+        </li>
+        <li class="block1__item-task">
+          <button id=""></button>
+        </li>
+        <li class="block1__item-task">
+          <button id=""></button>
+        </li>
+        <li class="block1__item-task">
+          <button id=""></button>
+        </li>
+        <li class="block1__item-task">
+          <button id=""></button>
+        </li>
+        <li class="block1__item-task">
+          <button id=""></button>
+        </li>
+      </ul>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
