--- a/index.html
+++ b/index.html
@@ -180,10 +180,17 @@
           </button>
         </li>
         <li class="block1__item-task">
-          <button id=""></button>
+          <button id="task24">
+            4. Определить количество цифр в введенном числе.
+          </button>
         </li>
         <li class="block1__item-task">
-          <button id=""></button>
+          <button id="task25">
+            5. Запросить у пользователя 10 чисел и подсчитать, сколько он ввел
+            положительных, отрицательных и нулей. При этом также посчитать,
+            сколько четных и нечетных. Вывести статистику на экран. Учтите, что
+            достаточно одной переменной (не 10) для ввода чисел пользователем.
+          </button>
         </li>
         <li class="block1__item-task">
           <button id=""></button>
