--- a/index.html
+++ b/index.html
@@ -207,13 +207,29 @@
           </button>
         </li>
         <li class="block1__item-task">
-          <button id=""></button>
+          <button id="task28">
+            8. Зациклить вывод дней недели таким образом: «День недели. Хотите
+            увидеть следующий день?» и так до тех пор, пока пользователь
+            нажимает OK.
+          </button>
         </li>
         <li class="block1__item-task">
-          <button id=""></button>
+          <button id="task29">
+            9. Вывести таблицу умножения для всех чисел от 2 до 9. Каждое число
+            необходимо умножить на числа от 1 до 10.
+          </button>
         </li>
         <li class="block1__item-task">
-          <button id=""></button>
+          <button id="task30">
+            10. Игра «Угадай число». Предложить пользователю загадать число от 0
+            до 100 и отгадать его следующим способом: каждую итерацию цикла
+            делите диапазон чисел пополам, записываете результат в N и
+            спрашиваете у пользователя «Ваше число > N, < N или == N?». В
+            зависимости от того, что указал пользователь, уменьшаете диапазон.
+            Начальный диапазон от 0 до 100, поделили пополам и получили 50. Если
+            пользователь указал, что его число > 50, то изменили диапазон на от
+            51 до 100. И так до тех пор, пока пользователь не выберет == N.
+          </button>
         </li>
       </ul>
     </div>
