:tada: 4 homework started

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#block1" class="header__nav-link">Основы JavaScript</a
         ><a href="#block2" class="header__nav-link">Типи даних та оператори</a>
         <a href="#block3" class="header__nav-link">Цикли</a>
+        <a href="#block4" class="header__nav-link">Функції</a>
       </div>
     </header>
     <div class="block1" id="block1">
@@ -224,12 +225,55 @@
             10. Игра «Угадай число». Предложить пользователю загадать число от 0
             до 100 и отгадать его следующим способом: каждую итерацию цикла
             делите диапазон чисел пополам, записываете результат в N и
-            спрашиваете у пользователя «Ваше число > N, < N или == N?». В
-            зависимости от того, что указал пользователь, уменьшаете диапазон.
-            Начальный диапазон от 0 до 100, поделили пополам и получили 50. Если
-            пользователь указал, что его число > 50, то изменили диапазон на от
-            51 до 100. И так до тех пор, пока пользователь не выберет == N.
+            спрашиваете у пользователя «Ваше число , &#8250; N, &#8249; N или ==
+            N?». В зависимости от того, что указал пользователь, уменьшаете
+            диапазон. Начальный диапазон от 0 до 100, поделили пополам и
+            получили 50. Если пользователь указал, что его число &#8250; 50, то
+            изменили диапазон на от 51 до 100. И так до тех пор, пока
+            пользователь не выберет == N.
           </button>
+        </li>
+      </ul>
+    </div>
+    <div class="block1" id="block4">
+      <h1 class="block1__title">Lesson JS-4. Функції</h1>
+      <ul class="block1__list">
+        <li class="block1__item-task">
+          <button id="task31">
+            1. Написать функцию, которая принимает 2 числа и возвращает -1, если
+            первое меньше, чем второе; 1 – если первое больше, чем второе; и 0 –
+            если числа равны.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task32">
+            2. Написать функцию, которая вычисляет факториал переданного ей
+            числа.
+          </button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task33">3.</button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task34">4.</button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task35">5.</button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task36">6.</button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task37">7.</button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task38">8.</button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task39">9.</button>
+        </li>
+        <li class="block1__item-task">
+          <button id="task40">10.</button>
         </li>
       </ul>
     </div>
