:construction: tasks added

--- a/index.html
+++ b/index.html
@@ -252,19 +252,40 @@
           </button>
         </li>
         <li class="block1__item-task">
-          <button id="task33">3.</button>
+          <button id="task33">
+            3. Написать функцию, которая принимает три отдельные цифры и
+            превращает их в одно число. Например: цифры 1, 4, 9 превратятся в
+            число 149.
+          </button>
         </li>
         <li class="block1__item-task">
-          <button id="task34">4.</button>
+          <button id="task34">
+            4. Написать функцию, которая принимает длину и ширину прямоугольника
+            и вычисляет его площадь. Если в функцию передали 1 параметр, то она
+            вычисляет площадь квадрата.
+          </button>
         </li>
         <li class="block1__item-task">
-          <button id="task35">5.</button>
+          <button id="task35">
+            5. Написать функцию, которая проверяет, является ли переданное ей
+            число совершенным. Совершенное число – это число, равное сумме всех
+            своих собственных делителей.
+          </button>
         </li>
         <li class="block1__item-task">
-          <button id="task36">6.</button>
+          <button id="task36">
+            6. Написать функцию, которая принимает минимальное и максимальное
+            значения для диапазона, и выводит только те числа из диапазона,
+            которые являются совершенными. Используйте написанную ранее функцию,
+            чтобы узнавать, совершенное число или нет.
+          </button>
         </li>
         <li class="block1__item-task">
-          <button id="task37">7.</button>
+          <button id="task37">
+            7. Написать функцию, которая принимает время (часы, минуты, секунды)
+            и выводит его на экран в формате «чч:мм:сс».Если при вызове функции
+            минуты и/или секунды не были переданы, то выводить их как 00.
+          </button>
         </li>
         <li class="block1__item-task">
           <button id="task38">8.</button>
