--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="#block3" class="header__nav-link">Цикли</a>
         <a href="#block4" class="header__nav-link">Функції</a>
         <a href="#objects" class="header__nav-link">Об’єкти</a>
+        <a href="#arrays" class="header__nav-link">Масиви</a>
       </div>
     </header>
     <div class="block1" id="block1">
@@ -344,6 +345,78 @@
             последних 3-х функциях, при изменении одной части времени, может
             измениться и другая. Например, если ко времени «20:30:45» добавить
             30 секунд, то должно получиться «20:31:15», а не «20:30:75».
+          </button>
+        </li>
+      </ul>
+    </div>
+    <div class="block1" id="arrays">
+      <h1 class="block1__title">Масиви</h1>
+      <ul class="block1__list">
+        <li class="block1__item-task--fourth">
+          <button id="task51">
+            1. Создать массив «Список покупок». Каждый элемент массива является
+            объектом, который содержит название продукта, необходимое количество
+            и куплен или нет. Написать несколько функций для работы с таким
+            массивом.
+            <ul>
+              <li>
+                Вывод всего списка на экран таким образом, чтобы сначала шли
+                некупленные продукты, а потом – купленные.
+              </li>
+              <li>
+                Добавление покупки в список. Учтите, что при добавлении покупки
+                с уже существующим в списке продуктом, необходимо увеличивать
+                количество в существующей покупке, а не добавлять новую.
+              </li>
+              <li>
+                Покупка продукта. Функция принимает название продукта и отмечает
+                его как купленный.
+              </li>
+            </ul>
+          </button>
+        </li>
+        <li class="block1__item-task--fourth">
+          <button id="task52">
+            2. Создать массив, описывающий чек в магазине. Каждый элемент
+            массива состоит из названия товара, количества и цены за единицу
+            товара. Написать следующие функции:
+
+            <ul>
+              <li>Распечатка чека на экран;</li>
+              <li>Подсчет общей суммы покупки;</li>
+              <li>Получение самой дорогой покупки в чеке;</li>
+              <li>Подсчет средней стоимости одного товара в чеке.</li>
+            </ul>
+          </button>
+        </li>
+        <li class="block1__item-task--fourth">
+          <button id="task53">
+            3. Создать массив CSS-стилей (цвет, размер шрифта, выравнивание,
+            подчеркивание и т. д.). Каждый элемент массива – это объект,
+            состоящий из двух свойств: название стиля и значение стиля. Написать
+            функцию, которая принимает массив стилей и текст, и выводит этот
+            текст с помощью document.write() в тегах p, добавив в открывающий
+            тег атрибут style со всеми стилями, перечисленными в массиве.
+          </button>
+        </li>
+        <li class="block1__item-task--fourth">
+          <button id="task54">
+            4. Создать массив аудиторий академии. Объект-аудитория состоит из
+            названия, количества посадочных мест (от 10 до 20) и названия
+            факультета, для которого она предназначена. Написать несколько
+            функций для работы с ним^
+
+            <ul>
+              <li>Вывод на экран всех аудиторий;</li>
+              <li>Вывод на экран аудиторий для указанного факультета;</li>
+              <li>
+                Вывод на экран только тех аудиторий, которые подходят для
+                переданной группы. Объект-группа состоит из названия, количества
+                студентов и названия факультета;
+              </li>
+              <li>Функция сортировки аудиторий по количеству мест;</li>
+              <li>Функция сортировки аудиторий по названию (по алфавиту).</li>
+            </ul>
           </button>
         </li>
       </ul>
